# datasciencecoursera

./: HelloWorld.md  README.md
For_SW_HOC_inRGC/: .dropbox  README
For_SW_HOC_inRGC/For_SW_HOC_inRGC/: ou_generator.cpp  ou_generator.hpp  outest.py  test.py  test2.py  test3.py
For_SW_HOC_inRGC/For_SW_HOC_inRGC/RGC_Code_as_of_2014/: file_summary.rtf  generate_noise_conductances.m  generate_stim.m  generate_stim_stixel.m  run_IaF_Badel.m  run_IaF_Badel_Rectified.m  run_IaF_Badel_Recur_Rect.m  run_IaF_Badel_Recurrent.m  run_many_Recur_g_1.m  simulate_spikes_Badel_Recurrent.m
For_SW_HOC_inRGC/For_SW_HOC_inRGC/generate_OU_code/: generate_noise_OU_NEST.py  generate_noise_conductances_NEST.py  sim_example.py
For_SW_HOC_inRGC/RGC_Code_as_of_2014/: SpikeShape.mat  generate_feature_space_01.m  get_function.m  make_stim_struct.m  run_many_FullField.m  simulate_spikes_Badel.m  simulate_spikes_Badel_Rectified.m  simulate_spikes_Badel_Recur_Rect.m
For_SW_HOC_inRGC/References/: fit_reif_Badel.tex  notes_corr_OU_process.aux  notes_corr_OU_process.tex
For_SW_HOC_inRGC/Sihao_Test/: ou_generator.cpp  test3.py  test3.py~
For_SW_HOC_inRGC/generate_OU_code/: README  generate_noise_conductances.py  generate_stim.py  generate_stim_test.py
For_SW_HOC_inRGC/rgc_nest_code/: try_reif_example.py  try_reif_example_v2.py
For_SW_HOC_inRGC/rgc_nest_code/ReifModule/: Makefile.am  README  bootstrap.sh  configure.ac  drop_odd_spike_connection.h  pif_psc_alpha.cpp  pif_psc_alpha.h  reif_cond_alpha_RK5.cpp  reif_cond_alpha_RK5.h  reifmodule.cpp  reifmodule.h
For_SW_HOC_inRGC/rgc_nest_code/ReifModule/sli/: reifmodule-init.sli
